Update html css

--- a/index.html
+++ b/index.html
@@ -31,13 +31,9 @@
         <nav class="header-nav">
           <a href="./index.html" class="logo header-logo"
             >SIMPLY&nbsp<span class="logo-word">CHOCOLATE</span>
-            <img
-              class="logo-img"
-              src="./images/icons/logo.svg"
-              alt="Site logo"
-              width="24"
-              height="24"
-          /></a>
+            <svg width="24" height="24">
+              <use href="./images/icons.svg#icon-logo"></use></svg
+          ></a>
           <ul class="header-nav-list">
             <li class="header-nav-item">
               <a href="index.html" class="header-nav-link">Home</a>
@@ -58,13 +54,9 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Facebook link"
-              ><img
-                class="social-img"
-                src="./images/icons/icon-facebook.svg"
-                alt="Icon facebook"
-                width="24"
-                height="24"
-            /></a>
+              ><svg width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use></svg
+            ></a>
           </li>
           <li class="social-list">
             <a
@@ -73,13 +65,9 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Instagram link"
-              ><img
-                class="social-img"
-                src="./images/icons/icon-instagram.svg"
-                alt="Icon Instagram"
-                width="24"
-                height="24"
-            /></a>
+              ><svg width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use></svg
+            ></a>
           </li>
           <li class="social-list">
             <a
@@ -88,13 +76,9 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Twitter link"
-              ><img
-                class="social-img"
-                src="./images/icons/icon-twitter.svg"
-                alt="Icon Twitter"
-                width="24"
-                height="24"
-            /></a>
+              ><svg width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use></svg
+            ></a>
           </li>
         </ul>
       </div>
@@ -122,12 +106,9 @@
             <a class="hero-link" href="#"
               >Scroll down
               <span class="hero-img">
-                <img
-                  src="./images/icons/2.svg"
-                  alt="Arrow down"
-                  width="22"
-                  height="22"
-              /></span>
+                <svg width="22" height="22">
+                  <use href="./images/icons.svg#icon-scroll"></use></svg
+              ></span>
             </a>
           </div>
         </div>
@@ -139,6 +120,11 @@
           <h2 class="visually-hidden">Chocolate Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
+              <div class="benefits-wrapper">
+                <svg width="32" height="32">
+                  <use href="./images/icons.svg#icon-chocolate"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item-title">Unsurpassed taste</h3>
               <p class="benefits-item-desc">
                 Crafted with the finest quality cocoa beans and a dedication to
@@ -148,6 +134,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-wrapper">
+                <svg width="32" height="32">
+                  <use href="./images/icons.svg#icon-coin"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item-title">Affordable price</h3>
               <p class="benefits-item-desc">
                 Indulge in high-quality chocolate without breaking the bank with
@@ -158,6 +149,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-wrapper">
+                <svg width="32" height="32">
+                  <use href="./images/icons.svg#icon-spoon"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item-title">Own production</h3>
               <p class="benefits-item-desc">
                 We take pride in our own production process, ensuring that every
@@ -179,6 +175,11 @@
           </h2>
           <ul class="ingredients-list">
             <li class="ingredients-item">
+              <div class="ingredients-wrapper">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-arrow"></use>
+                </svg>
+              </div>
               <img
                 class="ingredients-img"
                 src="./images/ingridients/img-1.png"
@@ -189,6 +190,11 @@
               <h3 class="ingredients-list-title">MILK CHOCOLATE</h3>
             </li>
             <li class="ingredients-item">
+              <div class="ingredients-wrapper">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-arrow"></use>
+                </svg>
+              </div>
               <img
                 class="ingredients-img"
                 src="./images/ingridients/img-2.png"
@@ -199,6 +205,11 @@
               <h3 class="ingredients-list-title">MILK</h3>
             </li>
             <li class="ingredients-item">
+              <div class="ingredients-wrapper">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-arrow"></use>
+                </svg>
+              </div>
               <img
                 class="ingredients-img"
                 src="./images/ingridients/img-3.png"
@@ -209,6 +220,11 @@
               <h3 class="ingredients-list-title">NUTS</h3>
             </li>
             <li class="ingredients-item">
+              <div class="ingredients-wrapper">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-arrow"></use>
+                </svg>
+              </div>
               <img
                 class="ingredients-img"
                 src="./images/ingridients/img-4.png"
@@ -219,6 +235,11 @@
               <h3 class="ingredients-list-title">SEMI - SWEET CHOCOLATE</h3>
             </li>
             <li class="ingredients-item">
+              <div class="ingredients-wrapper">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-arrow"></use>
+                </svg>
+              </div>
               <img
                 class="ingredients-img"
                 src="./images/ingridients/img-5.png"
@@ -229,6 +250,11 @@
               <h3 class="ingredients-list-title">CACAO</h3>
             </li>
             <li class="ingredients-item">
+              <div class="ingredients-wrapper">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-arrow"></use>
+                </svg>
+              </div>
               <img
                 class="ingredients-img"
                 src="./images/ingridients/img-6.png"
@@ -239,6 +265,11 @@
               <h3 class="ingredients-list-title">RASPBERRY</h3>
             </li>
             <li class="ingredients-item">
+              <div class="ingredients-wrapper">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-arrow"></use>
+                </svg>
+              </div>
               <img
                 class="ingredients-img"
                 src="./images/ingridients/img-7.png"
