Update html css

--- a/index.html
+++ b/index.html
@@ -678,10 +678,10 @@
               </li>
             </ul>
           </nav>
-          <div class="footer-subscribe">
+          <form class="footer-subscribe">
             <input type="email" placeholder="Enter your email" required />
             <button class="footer-button" type="submit">Subscribe</button>
-          </div>
+          </form>
         </div>
       </div>
     </footer>
