Update index styles

--- a/index.html
+++ b/index.html
@@ -686,5 +686,91 @@
       </div>
     </footer>
     <!-- #endregion -->
+    <!-- #region Modal -->
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-button" type="button">
+          <svg class="modal-button-icon" width="28" height="28">
+            <use href="./images/icons.svg#icon-x-close"></use>
+          </svg>
+        </button>
+        <p class="modal-caption">
+          LEAVE A REVIEW ABOUT <span class="modal-word">OUR CHOCOLATE</span>
+        </p>
+        <form class="modal-form" name="review_form" autocomplete="on">
+          <div class="modal-wrapper">
+            <label class="modal-label" for="user_name">Name</label>
+            <div class="modal-field">
+              <input
+                class="modal-field-input"
+                type="text"
+                id="user_name"
+                name="user_name"
+              />
+              <svg class="modal-field-icon orange" width="24" height="24">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-wrapper">
+            <label class="modal-label" for="user_email">Email</label>
+            <div class="modal-field">
+              <input
+                class="modal-field-input"
+                type="text"
+                id="user_email"
+                name="user_email"
+              />
+              <svg class="modal-field-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-mail"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-wrapper">
+            <label class="modal-label" for="user_number">Phone number</label>
+            <div class="modal-field">
+              <input
+                class="modal-field-input"
+                type="text"
+                id="user_number"
+                name="user_number"
+              />
+              <svg class="modal-field-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-wrapper">
+            <label class="modal-label" for="user_message">Comment</label>
+            <div class="modal-field">
+              <textarea
+                class="modal-message"
+                name="user_message"
+                id="user_message"
+                cols="30"
+                rows="4"
+                placeholder="Enter text"
+              ></textarea>
+            </div>
+          </div>
+          <input
+            class="agreement-box visually-hidden"
+            type="checkbox"
+            id="checkbox"
+          />
+          <label class="agreement-label" for="checkbox">
+            <span class="agreement-checkbox">
+              <svg class="agreement-checkbox-icon" width="10" height="10">
+                <use href="./images/icons.svg#icon-check"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the&nbsp;
+            <a class="agreement-checkbox-link" href="#">Privacy Policy</a>
+          </label>
+          <button type="submit" class="btn btn-accent">Send</button>
+        </form>
+      </div>
+    </div>
+    <!-- #endregion Modal -->
   </body>
 </html>
