--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
       <!--#endregion Reviews-->
     </main>
     <!-- #region Footer -->
-    <footer class="footer">
+    <footer class="footer hide">
       <div class="container">
         <div class="footer-cont">
           <h2 class="footer-title">
