--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <!--#region Header-->
-    <header class="header hide">
+    <header class="header">
       <div class="container">
         <nav class="header-nav">
           <a href="./index.html" class="logo header-logo"
@@ -86,7 +86,7 @@
     <!--#endregion Header-->
     <main>
       <!--#region Hero-->
-      <section class="hero hide">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">
             Treat yourself or a loved one to our finest ingredients for a moment
@@ -115,7 +115,7 @@
       </section>
       <!--#endregion Hero-->
       <!--#region Benefits-->
-      <section class="benefits hide">
+      <section class="benefits">
         <div class="container">
           <h2 class="visually-hidden">Chocolate Benefits</h2>
           <ul class="benefits-list">
@@ -167,7 +167,7 @@
       </section>
       <!--#endregion Describtion-->
       <!--#region Ingredients-->
-      <section class="ingredients hide">
+      <section class="ingredients">
         <div class="container">
           <h2 class="ingredients-title">
             It all adds up to one exceptional
@@ -284,7 +284,7 @@
       </section>
       <!--#endregion Ingredients-->
       <!--#region Instruction-->
-      <section id="made" class="instruction hide">
+      <section id="made" class="instruction">
         <div class="container">
           <h2 class="instruction-title">
             How it's <span class="instruction-word">made</span>?
@@ -336,7 +336,7 @@
       </section>
       <!--#endregion Instruction-->
       <!--#region Products-->
-      <section class="produscts hide">
+      <section class="produscts">
         <div class="container">
           <h2 class="products-title">
             Our <span class="products-word">products</span>
@@ -459,7 +459,7 @@
       </section>
       <!--#endregion Products-->
       <!--#region Top-->
-      <section class="top hide">
+      <section class="top">
         <div class="container">
           <h2 class="top-title"><span class="top-word">Top</span> sellers</h2>
           <ul class="top-list">
@@ -530,7 +530,7 @@
       </section>
       <!--#endregion Top-->
       <!--#region Reviews-->
-      <section id="reviews" class="reviews hide">
+      <section id="reviews" class="reviews">
         <div class="container">
           <h2 class="reviews-title">
             <span class="reviews-word">Chocolate</span> is loved
@@ -599,7 +599,7 @@
       <!--#endregion Reviews-->
     </main>
     <!-- #region Footer -->
-    <footer class="footer hide">
+    <footer class="footer">
       <div class="container">
         <div class="footer-cont">
           <h2 class="footer-title">
