--- a/images/ingridients/index.html
+++ b/images/ingridients/index.html
@@ -182,7 +182,7 @@
               </div>
               <img
                 class="ingredients-img"
-                srcset="./images/ingridients/img-1.png"
+                src="./images/ingridients/img-1.png"
                 alt="MILK CHOCOLATE"
                 width="214"
                 height="160"
